# docs/swagger.json
@@ -23,8 +23,8 @@
                 "summary": "Login endpoint",
                 "parameters": [
                     {
-                        "description": "email",
-                        "name": "email",
+                        "description": "Email",
+                        "name": "Email",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -32,8 +32,8 @@
                         }
                     },
                     {
-                        "description": "password",
-                        "name": "password",
+                        "description": "Password",
+                        "name": "Pasword",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -66,7 +66,7 @@
                 "parameters": [
                     {
                         "description": "example@gmail.com",
-                        "name": "email",
+                        "name": "Email",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -75,7 +75,7 @@
                     },
                     {
                         "description": "password",
-                        "name": "password",
+                        "name": "Password",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -84,7 +84,7 @@
                     },
                     {
                         "description": "aymen charfaoui",
-                        "name": "full_name",
+                        "name": "Name",
                         "in": "body",
                         "required": true,
                         "schema": {
